# vininfo

./: .coveragerc  .gitignore  .hgignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: Makefile  README.rst
docs/source/: conf.py  index.rst  quickstart.rst  rst_guide.rst
src/vininfo/: __init__.py  assemblers.py  brands.py  cli.py  common.py  toolbox.py  utils.py
src/vininfo/details/: __init__.py  _base.py  avtovaz.py  bajaj.py  dafra.py  ford.py  nissan.py  opel.py  renault.py
src/vininfo/dicts/: __init__.py  bodies.py  countries.py  wmi.py
tests/: test_bajaj.py  test_dafra.py  test_ford_australia.py  test_lada.py  test_module.py  test_nissan.py  test_opel.py  test_renault.py
vininfo/: __init__.py  brands.py  cli.py  common.py  exceptions.py  toolbox.py  utils.py
vininfo/details/: __init__.py  _base.py  avtovaz.py  bajaj.py  dafra.py  nissan.py  opel.py  renault.py  toyota.py
vininfo/dicts/: __init__.py  bodies.py  coachworks.py  countries.py  regions.py  wmi.py
